[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/ChangingBlock.gd" type="Script" id=1]
[ext_resource path="res://Sprites/BlackBlock.png" type="Texture" id=2]
[ext_resource path="res://Sprites/WhiteBlock.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 32, 32 )

[node name="ChangingBlock" type="Node2D"]

script = ExtResource( 1 )

[node name="PlayerDetection" type="Area2D" parent="." index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 3
collision_mask = 3
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection" index="0"]

shape = SubResource( 1 )

[node name="PlayerCollision" type="StaticBody2D" parent="." index="1"]

input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCollision" index="0"]

shape = SubResource( 1 )

[node name="BlackSprite" type="Sprite" parent="." index="2"]

texture = ExtResource( 2 )

[node name="WhiteSprite" type="Sprite" parent="." index="3"]

texture = ExtResource( 3 )


